Added more pages and css file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
 <!DOCTYPE HTML>
+
+<html>
+	<head>
+		<meta charset = utf-8/>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/> 
+		<title>Josh Salyer's Website</title>
+	</head>
+
+	<body>
+		<header>
+			<div id="navigation">
+				<a href="index.html">Home</a>
+				<a href="goals.html">Goals</a>
+				<a href="articles.html">Articles</a>
+				<a href="social_media.html">Social Media</a>
+				<a href="my_family.html">My Family</a>
+			</div>
+		</header>
+		<h1>Joshua Salyer</h1>
+
+		<h2>Welcome!</h2>
+		<!-- <p>Hello! My name is Joshua Salyer and I am a junior developer. I am currently attending the <a href="http://www.omahacodeschool.com">Omaha Code School</a>just getting started in web development. I love learning how things work and using that knowledge to make incredible things. My favorite language to code in is probably Ruby but I also haven't experimented with very many languages either at this point. I've started to learn some JavaScript, Python, PHP, HTML, and CSS though. I hope that I can find time to learn Swift because creating iOS applications(especially mobile apps) sounds like a lot of fun to me. If you'd like to see more of my personal and professional goals, please visit my <a href="goals.html">goals</a> page.</p>
+
+		<p></p> -->
+		<p>Hello! My name is Josh. I moved to Omaha about three years ago after living in St. Louis for about five years. I grew up in McCook, NE which is a small town on the other side of the state. I've worked in kitchens most of my life and moved to St. Louis to attend culinary school right after high school. I helped start a restaurant there called <a href="http://junipereats.com/">Entre</a>. They have renamed it but the idea and menu design is still the same.</p>
+
+		<p>I love understanding how and why things work. I think that's one of the main things that attracts me to coding. I don't really have much experience writing code but I am currently attending the <a href="http://www.omahacodeschool.com">Omaha Code School</a>, I have been doing some courses on <a href="http://www.teamtreehouse.com">Team Treehouse</a>, and reading as much as I can.</p>
+
+		<p>I am married with two children who are 4 and 1. I enjoy watching all kinds of movies and listen to a wide variety of music. MAHA is one of my favorite music festivals i've been to since moving to Omaha. When the weather lets me, I like to garden and go backpacking. On the weekends you can find me searching for ingredients at the farmers market or at the park with my kids. Feel free to get in touch with me.</p>
+	</body>
+</html>
