Added footer, social networking images, and social networking links

--- a/articles.html
+++ b/articles.html
@@ -30,4 +30,10 @@
 
 		<p>	Until SQRL apps become integrated into operating systems for smart phones you will need to choose which SQRL client to install onto your device if you want to take advantage of these features. The SQRL system algorithms, libraries, and packages all exist in the public domain and are ready to be assembled for use. SQRL may be the standard way to login in the future especially as identity theft grows.</p>
 	</body>
+	<footer>
+      	<a href="http://twitter.com/joshsalyer23"><img alt="Twitter Logo" src="img/TwitterLogo.png"></a>
+      	<a href="http://facebook.com/joshsalyer23"><img alt="Facebook Logo" src="img/FB-f-Logo__blue_50.png"></a>
+      	<a href="http://github.com/jsalyer23"><img alt="GitHub Logo" src="img/GitHub-Mark-32px.png"></a>
+      	<p>&copy; 2016 Josh Salyer.</p>
+    </footer>
 </html>
