--- a/goals.html
+++ b/goals.html
@@ -9,7 +9,6 @@
 
 	<body>
 		<header>
-			<h1>Joshua Salyer</h1>
 			<div id="navigation">
 				<a href="index.html">Home</a>
 				<a href="goals.html">Goals</a>
@@ -18,5 +17,12 @@
 				<a href="my_family.html">My Family</a>
 			</div>
 		</header>
+		<h1>Joshua Salyer</h1>
 	</body>
+	<footer>
+      	<a href="http://twitter.com/joshsalyer23"><img alt="Twitter Logo" src="img/TwitterLogo.png"></a>
+      	<a href="http://facebook.com/joshsalyer23"><img alt="Facebook Logo" src="img/FB-f-Logo__blue_50.png"></a>
+      	<a href="http://github.com/jsalyer23"><img alt="GitHub Logo" src="img/GitHub-Mark-32px.png"></a>
+      	<p>&copy; 2016 Josh Salyer.</p>
+    </footer>
 </html>
