Changed the GitHub logo and deleted Twitter logo. Twitter Logo too big

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 		<p>I am married with two children who are 4 and 1. I enjoy watching all kinds of movies and listen to a wide variety of music. MAHA is one of my favorite music festivals i've been to since moving to Omaha. When the weather lets me, I like to garden and go backpacking. On the weekends you can find me searching for ingredients at the farmers market or at the park with my kids. Feel free to get in touch with me.</p>
 	</body>
 	<footer>
-      	<a href="http://twitter.com/joshsalyer23"><img alt="Twitter Logo" src="img/TwitterLogo.png"></a>
+      	<a href="http://twitter.com/joshsalyer23"><img alt="Twitter Logo" src=""></a>
       	<a href="http://facebook.com/joshsalyer23"><img alt="Facebook Logo" src="img/FB-f-Logo__blue_50.png"></a>
-      	<a href="http://github.com/jsalyer23"><img alt="GitHub Logo" src="img/GitHub-Mark-32px.png"></a>
+      	<a href="http://github.com/jsalyer23"><img alt="GitHub Logo" src="img/GitHub-Mark-64px.png"></a>
       	<p>&copy; 2016 Josh Salyer.</p>
     </footer>
 </html>
