--- a/my_family.html
+++ b/my_family.html
@@ -20,9 +20,9 @@
 		<h1>Joshua Salyer</h1>
 	</body>
 	<footer>
-      	<a href="http://twitter.com/joshsalyer23"><img alt="Twitter Logo" src="img/TwitterLogo.png"></a>
+      	<a href="http://twitter.com/joshsalyer23"><img alt="Twitter Logo" src=""></a>
       	<a href="http://facebook.com/joshsalyer23"><img alt="Facebook Logo" src="img/FB-f-Logo__blue_50.png"></a>
-      	<a href="http://github.com/jsalyer23"><img alt="GitHub Logo" src="img/GitHub-Mark-32px.png"></a>
+      	<a href="http://github.com/jsalyer23"><img alt="GitHub Logo" src="img/GitHub-Mark-64px.png"></a>
       	<p>&copy; 2016 Josh Salyer.</p>
     </footer>
 </html>
