Added some goals to the goals page...

--- a/goals.html
+++ b/goals.html
@@ -18,6 +18,18 @@
 			</div>
 		</header>
 		<h1>Joshua Salyer</h1>
+		<h3>Professional Goals</h3>
+			<ul>
+				<li><em>Effectively</em> use a wide variety of programming languages</li>
+				<li><em>Learn</em> from the open source community and my employers</li>
+				<li><em>Develop</em> mobile applications for iOS using Swift</li>
+			</ul>
+		<h3>Personal Goals</h3>
+			<ul>
+				<li><strong>Truely</strong> spend time with my wife and children everyday</li>
+				<li>Visit a foreign country and experience it's culture</li>
+				<li><strong>Never</strong> stop learning and teaching my children about the world</li>
+			</ul>
 	</body>
 	<footer>
       	<a href="http://twitter.com/joshsalyer23"><img alt="Twitter Logo" src=""></a>
