Added id current_page to all pages to modify the current page div element in navigation

--- a/goals.html
+++ b/goals.html
@@ -11,7 +11,7 @@
 		<header>
 			<div id="navigation">
 				<a href="index.html">Home</a>
-				<a href="goals.html">Goals</a>
+				<a id="current_page" href="goals.html">Goals</a>
 				<a href="articles.html">Articles</a>
 				<a href="social_media.html">Social Media</a>
 				<a href="my_family.html">My Family</a>
