--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<div id="navigation">
-				<a href="index.html">Home</a>
+				<a id="current_page" href="index.html">Home</a>
 				<a href="goals.html">Goals</a>
 				<a href="articles.html">Articles</a>
 				<a href="social_media.html">Social Media</a>
