--- a/social_media.html
+++ b/social_media.html
@@ -13,10 +13,11 @@
 				<a href="index.html">Home</a>
 				<a href="goals.html">Goals</a>
 				<a href="articles.html">Articles</a>
-				<a href="social_media.html">Social Media</a>
+				<a id="current_page" href="social_media.html">Social Media</a>
 				<a href="my_family.html">My Family</a>
 			</div>
 		</header>
 		<h1>Joshua Salyer</h1>
+
 	</body>
 </html>
