--- a/articles.html
+++ b/articles.html
@@ -13,7 +13,7 @@
 				<div id="navigation">
 				<a href="index.html">Home</a>
 				<a href="goals.html">Goals</a>
-				<a href="articles.html">Articles</a>
+				<a id="current_page" href="articles.html">Articles</a>
 				<a href="social_media.html">Social Media</a>
 				<a href="my_family.html">My Family</a>
 			</div>
