--- a/my_family.html
+++ b/my_family.html
@@ -14,7 +14,7 @@
 				<a href="goals.html">Goals</a>
 				<a href="articles.html">Articles</a>
 				<a href="social_media.html">Social Media</a>
-				<a href="my_family.html">My Family</a>
+				<a id="current_page" href="my_family.html">My Family</a>
 			</div>
 		</header>
 		<h1>Joshua Salyer</h1>
