Added 2nd article, changed nav titles for articles on all pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 			<div id="navigation">
 				<a id="current_page" href="index.html">Home</a>
 				<a href="goals.html">Goals</a>
-				<a href="articles.html">Articles</a>
+				<a href="articles1.html">SQRL</a>
+				<a href="articles2.html">The World Wide Web</a>
 				<a href="social_media.html">Social Media</a>
 				<a href="my_family.html">My Family</a>
 			</div>
