--- a/articles1.html
+++ b/articles1.html
@@ -13,7 +13,8 @@
 				<div id="navigation">
 				<a href="index.html">Home</a>
 				<a href="goals.html">Goals</a>
-				<a id="current_page" href="articles.html">Articles</a>
+				<a id="current_page" href="articles1.html">SQRL</a>
+				<a href="articles2.html">The World Wide Web</a>
 				<a href="social_media.html">Social Media</a>
 				<a href="my_family.html">My Family</a>
 			</div>
